keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: permedcoe
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      hostAliases:
      - ip: 10.152.183.42
        hostnames:
        - grafana.croupier.ari-aidata.eu      
      containers:
      - name: keycloak
        image: jboss/keycloak:16.1.1
        resources:
          limits:
            cpu: "1"
            memory: "1G"
          requests:
            cpu: "0.5"
            memory: "512M"
        volumeMounts:
          - name: keycloak-realm
            mountPath: "/home/secret/"
            readOnly: true
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
      volumes:
        - name: keycloak-realm
          secret:
            secretName: keycloak-realm
            items:
              - key: permedcoe-realm.json
                path: permedcoe-realm.json
                mode: 0444
