keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: keycloak
spec:
  ports:
  - name: keycloak
    port: 80 
    protocol: TCP
    targetPort: 8080
  - name: keycloak2
    port: 8443
    protocol: TCP
    targetPort: 8443 
  selector:
    app: keycloak
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
